fix overflow

--- a/src/assets/styles/appStyles.scss
+++ b/src/assets/styles/appStyles.scss
@@ -18,6 +18,8 @@ body {
         position: absolute;
         display: flex;
         flex-wrap: nowrap;
+        top: 0;
+        height: 100vh;
         // transition: transform 1s cubic-bezier(.18,0,.13,.97);
     }
 }
