--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -28,6 +28,12 @@
     animation: moveInTop 0.5s ease-out;
     animation-delay: 2s;
     animation-fill-mode: forwards;
+    z-index: 10;
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    height: auto;
+    box-sizing: border-box;
 
     &-title {
         flex: 1 1 auto;
