--- a/src/components/sections/About.scss
+++ b/src/components/sections/About.scss
@@ -16,6 +16,7 @@
 
 .about {
     padding: 20px;
+    padding-top: 80px;
     display: flex;
     flex-direction: column;
     overflow-x: hidden;
