--- a/src/components/sections/Banner.scss
+++ b/src/components/sections/Banner.scss
@@ -50,6 +50,7 @@
     flex: 1 1 auto;
     padding-left: 1rem;
     padding-right: 1rem;
+    padding-top: 60px;
     overflow: hidden;
 
     &-text {
