--- a/src/components/sections/WorkExperience.scss
+++ b/src/components/sections/WorkExperience.scss
@@ -30,6 +30,7 @@
 
 .work {
     padding: 1rem;
+    padding-top: 80px;
     flex: 1 1 auto;
     display: flex;
     justify-content: center;
